--- a/src/_servicios.scss
+++ b/src/_servicios.scss
@@ -11,7 +11,7 @@
     }
     .btn-servicio {
       @extend .btn;
-      background-color: $amarillo;
+      background-color: $negro;
       color: $azulOscuro;
       font-weight: bold;
 
