--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,8 @@
       <div class="navegacion">
       <h2>Menú</h2>
       <nav class="menu">
-          <a href="#noticias">Noticias</a>&nbsp;
+          <a href="#noticias">Tipos De Anime</a>&nbsp;
           <a href="#galeria">Galería</a>&nbsp;
-          <a href="#servicios">Servicios</a>&nbsp;
       </nav>
     </div> <!--.navegacion-->
     <div>
@@ -131,32 +130,7 @@
         <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/855/public/media/image/2015/09/517836-mejores-animes-todos-tiempos.jpg?itok=zYTT00Bq" width="200" height="200">
     </li>
   </div>
-
-  <div id="servicios" class="servicios">
-    <h2>Servicios</h2>
-      <ul class="servicios-lista">
-          <li>
-            <h3>Servicio 1</h3>
-                <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
-                <a class="btn-servicio1" href="#">Leer más</a>
-          </li>
-          <li>
-            <h3>Servicio 2</h3>
-                <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
-                <a class="btn-servicio2" href="#">Leer más</a>
-          </li>
-          <li>
-            <h3>Servicio 3</h3>
-                <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
-                <a class="btn-servicio3" href="#">Leer más</a>
-          </li>
-          <li>
-            <h3>Servicio 4</h3>
-                <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
-                <a class="btn-servicio4" href="#">Leer más</a>
-          </li>
-      </ul>
-  </div> <!--.servicios-->
+ <!--.servicios-->
 
     </div> <!--.container -->
   </body>
