--- a/src/_navegacion.scss
+++ b/src/_navegacion.scss
@@ -11,14 +11,14 @@
     display: inline;
     margin-top:10px;
       a {
-          color:$blanco;
-          font-size: 1.3rem;
+          color:$rojo;
+          font-size: 2.3rem;
           text-decoration: none;
           text-align:center;
           display: block;
-          margin-bottom: 20px;
+          margin-bottom: 10px;
           &:hover {
-            color:$amarillo;
+            color:$negro;
           }
       }
   }
